results/SVCOMP/4-shot/log-HttpServletRequest-2024_03_19_00_18_42.txt
import java.util.*;

public class HttpServletRequest {

  private /*@ spec_public*/ Cookie cookie = null;
  private /*@ spec_public*/ String tainted = null;

  //@ assignable tainted, cookie;
  //@ ensures tainted == value && cookie.getName() == value && cookie.getValue() == value;
  public void setTaintedValue(String value) {
    tainted = value;
    this.cookie = new Cookie(tainted, tainted);
  }

  //@ ensures \result.length == 1 && \result[0] == tainted;
  public String[] getParameterValues(String name) {
    return new String[] {tainted};
  }

  //@ ensures \result == tainted;
  public String getAuthType() {
    return tainted;
  }

  //@ ensures \result.length == 1 && \result[0] == cookie;
  public Cookie[] getCookies() {
    return new Cookie[] {cookie};
  }

  //@ ensures \result == tainted;
  public String getHeader(String string) {
    return tainted;
  }

  //@ ensures \result.hasMoreElements() && \result.nextElement() == tainted;
  public Enumeration getHeaders(String string) {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  //@ ensures \result.hasMoreElements() && \result.nextElement() == tainted;
  public Enumeration getHeaderNames() {
    return Collections.enumeration(Collections.singleton(tainted));
  }

  //@ ensures \result == tainted;
  public String getQueryString() {
    return tainted;
  }

  //@ ensures \result == tainted;
  public String getRemoteUser() {
    return tainted;
  }

  //@ ensures \result.toString() == tainted;
  public StringBuffer getRequestURL() {
    return new StringBuffer(tainted);
  }

  //@ ensures \result == tainted;
  public String getParameter(String string) {
    return tainted;
  }

  //@ ensures \result.hasMoreElements() && \result.nextElement() == "name";
  public Enumeration getParameterNames() {
    return Collections.enumeration(Collections.singleton("name"));
  }

  //@ ensures \result.get("name") == tainted;
  public Map getParameterMap() {
    Map<String, String> map = new HashMap<>();
    map.put("name", tainted);
    return map;
  }

  //@ ensures \result == tainted;
  public String getProtocol() {
    return tainted;
  }

  //@ ensures \result == tainted;
  public String getScheme() {
    return tainted;
  }
}
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:5: error: cannot find symbol
  private /*@ spec_public*/ Cookie cookie = null;
                            ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:26: error: cannot find symbol
  public Cookie[] getCookies() {
         ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:12: error: cannot find symbol
    this.cookie = new Cookie(tainted, tainted);
                      ^
  symbol:   class Cookie
  location: class HttpServletRequest
/home/max/Documents/JMLGPT/tmp/HttpServletRequest.java:27: error: cannot find symbol
    return new Cookie[] {cookie};
               ^
  symbol:   class Cookie
  location: class HttpServletRequest
4 errors

